--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,5 @@
 Fble:
 * [lang] Flesh out spec for new fble.
- - Clarify spec on partial and excessive function and poly application.
  - Describe types of types and kinds much better.
 
 * [perf] Avoid high cost of copying captured contexts
@@ -42,6 +41,7 @@ Fble Cleanup:
 Fble Lib:
 * Should Eq just be a function or an interface?
 * Write Test library.
+* Random number generator / tester?
 
 Fble App Ideas:
 * compress/deflate
